--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -15,6 +15,9 @@
     height: 100%;
 }
 #homeButtonText {
+    position: absolute;
+    padding-right: 10%;
+    text-align: center;
     color: #ffffff;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
@@ -86,8 +89,8 @@
     top: 10%;
     display: inline-block;
     border: none;
-    height: 90vh;
-    width: 100vw;
+    height: 90dvh;
+    width: 100dvw;
 }
 
 #current_election_text {
