--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -1,5 +1,6 @@
 #mainBanner {
     position: absolute; 
+    display: flex;
     top: 0; 
     left: 0; 
     background-color: #000000;
@@ -7,25 +8,29 @@
     height: 10%;
 }
 #homeButton {
-    position: absolute; 
+    /* position: absolute; */
+    display: inline-block;
     top: -1%; 
     left: 1%;
     background-color: #000000;
     width: 10%;
+    min-width: 90px;
     height: 100%;
 }
 #homeButtonText {
-    position: absolute;
-    padding-right: 10%;
+    /* position: absolute; */
+    /* padding-right: 10%; */
     text-align: center;
     color: #ffffff;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #button1867 {
-    position: absolute; 
+    /* position: absolute; */
+    display: inline-block;
     left: 10%;
     width: 10%;
+    min-width: 70px;
     height: 100%;
     background-color: #000000;
     color: #ffffff;
@@ -37,9 +42,11 @@
 }
 
 #button2019 {
-    position: absolute; 
+    /* position: absolute; */
+    display: inline-block;
     left: 20%;
     width: 10%;
+    min-width: 70px;
     height: 100%;
     background-color: #000000;
     color: #ffffff;
@@ -51,9 +58,11 @@
 }
 
 #button2021 {
-    position: absolute;
+    /* position: absolute; */
+    display: inline-block;
     left: 30%;
     width: 10%;
+    min-width: 70px;
     height: 100%;
     background-color: #000000;
     color: #ffffff;
@@ -65,9 +74,11 @@
 }
 
 #aboutButton {
-    position: absolute;
+    /* position: absolute; */
+    display: inline-block;
     right: 0%;
     width: 10%;
+    min-width: 70px;
     height: 100%;
     background-color: #000000;
     color: #ffffff;
