--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -2,13 +2,13 @@
     position: absolute; 
     display: flex;
     top: 0; 
+    left: 0px;
     background-color: #000000;
     width: 100dvw; 
     height: 10dvh;
 }
 #homeButton {
     display: inline-block;
-    top: -1%; 
     left: 1%;
     background-color: #000000;
     width: 10%;
@@ -90,6 +90,7 @@
 #iframe {
     position: absolute;
     top: 10%;
+    left: -1px;
     display: inline-block;
     border: none;
     height: 90dvh;
