--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -7,53 +7,29 @@
     width: 100dvw; 
     height: 10dvh;
 }
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  width: 10%;
+  min-width: 90px;
+}
+
 #homeButton {
-    display: inline-block;
-    left: 1%;
     background-color: #000000;
-    width: 10%;
+    color: #ffffff;
     min-width: 90px;
     height: 100%;
-}
-#homeButtonText {
-    text-align: center;
-    color: #ffffff;
+    font-size: large;
+    font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: none;
+    transition: all .5s ease;
 }
 
-#button1867 {
+.electionButtons {
     display: inline-block;
     left: 10%;
-    width: 10%;
-    min-width: 70px;
-    height: 100%;
-    background-color: #000000;
-    color: #ffffff;
-    font-size: large;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: none;
-    transition: all .5s ease;
-}
-
-#button2019 {
-    display: inline-block;
-    left: 20%;
-    width: 10%;
-    min-width: 70px;
-    height: 100%;
-    background-color: #000000;
-    color: #ffffff;
-    font-size: large;
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border: none;
-    transition: all .5s ease;
-}
-
-#button2021 {
-    display: inline-block;
-    left: 30%;
     width: 10%;
     min-width: 70px;
     height: 100%;
@@ -81,10 +57,35 @@
     transition: all .5s ease;
 }
 
-#button1867:hover, #button2019:hover, #button2021:hover, #aboutButton:hover {
+#homeButton:hover, .electionButtons:hover, #aboutButton:hover {
     transition: all .5s ease;
     background-color: #ffffff;
     color: #000000;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 60px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  text-align: center;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 #iframe {
