--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -16,6 +16,8 @@
 #homeButton {
     background-color: #000000;
     color: #ffffff;
+    margin-left: -1%;
+    margin-right: -1%;
     width: 10%;
     min-width: 90px;
     height: 100%;
