--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -67,9 +67,11 @@
   position: absolute;
   background-color: #f1f1f1;
   min-width: 60px;
+  max-height: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   text-align: center;
+  overflow: scroll;
 }
 
 .dropdown-content a {
