--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -114,3 +114,9 @@
     font-size: medium;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100dvw;
+}
