--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -6,6 +6,7 @@
     background-color: #000000;
     width: 100dvw; 
     height: 10dvh;
+    min-height: 10dvh;
 }
 
 .dropdown {
@@ -16,14 +17,15 @@
 #homeButton {
     background-color: #000000;
     color: #ffffff;
+    text-align: center;
+    padding-top: 7px;
     width: 10%;
     min-width: 90px;
-    height: 100%;
+    max-height: 10dvh;
     font-size: large;
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: none;
-    transition: all .5s ease;
 }
 
 .electionButtons {
