--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -275,6 +275,17 @@
     transition: all .5s ease;
 }
 
+.Labour_dot {
+    bottom: 10%;
+    height: 0.62rem;
+    width: 0.62rem;
+    margin: 0.07rem;
+    background-color:#FF8ADC;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all .5s ease;
+}
+
 .fifth_row, .fourth_row, .third_row, .second_row, .first_row, .sixth_row,
 .thirteenth_row, .twelfth_row, .eleventh_row, .tenth_row, .ninth_row,
 .eighth_row, .seventh_row {
@@ -284,7 +295,7 @@
 .Liberal_dot:hover, .Conservative_dot:hover, .Anti-Confederation_dot:hover,
 .Vacant_dot:hover, .Independent_dot:hover, .Nationalist-Conservative_dot:hover,
 .Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
-.Bloq-Quebecois_dot:hover {
+.Bloq-Quebecois_dot:hover, .Labour_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -294,7 +305,7 @@
         .Liberal_dot, .Conservative_dot, .Anti-Confederation_dot,
 .Vacant_dot, .Independent_dot, .Nationalist-Conservative_dot,
 .Patrons-of-Industry_dot, .McCarthyite_dot, .Green_dot, .NDP_dot,
-.Bloq-Quebecois_dot {
+.Bloq-Quebecois_dot, .Labour_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -314,7 +325,7 @@
     .Liberal_dot:hover, .Conservative_dot:hover, .Anti-Confederation_dot:hover,
 .Vacant_dot:hover, .Independent_dot:hover, .Nationalist-Conservative_dot:hover,
 .Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
-.Bloq-Quebecois_dot:hover {
+.Bloq-Quebecois_dot:hover, .Labour_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
