--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -154,7 +154,7 @@
     bottom: 1dvh;
 }
 
-.Liberal_dot {
+.Liberal_dot, .Opposition_dot {
     bottom: 10%;
     height: 0.62rem;
     width: 0.62rem;
@@ -165,7 +165,7 @@
     transition: all .5s ease;
 }
 
-.Conservative_dot {
+.Conservative_dot, .Unionist_dot {
     bottom: 10%;
     height: 0.62rem;
     width: 0.62rem;
@@ -295,7 +295,7 @@
 .Liberal_dot:hover, .Conservative_dot:hover, .Anti-Confederation_dot:hover,
 .Vacant_dot:hover, .Independent_dot:hover, .Nationalist-Conservative_dot:hover,
 .Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
-.Bloq-Quebecois_dot:hover, .Labour_dot:hover {
+.Bloq-Quebecois_dot:hover, .Labour_dot:hover, .Unionist_dot:hover, .Opposition_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -305,7 +305,7 @@
         .Liberal_dot, .Conservative_dot, .Anti-Confederation_dot,
 .Vacant_dot, .Independent_dot, .Nationalist-Conservative_dot,
 .Patrons-of-Industry_dot, .McCarthyite_dot, .Green_dot, .NDP_dot,
-.Bloq-Quebecois_dot, .Labour_dot {
+.Bloq-Quebecois_dot, .Labour_dot, .Unionist_dot, .Opposition_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -325,7 +325,7 @@
     .Liberal_dot:hover, .Conservative_dot:hover, .Anti-Confederation_dot:hover,
 .Vacant_dot:hover, .Independent_dot:hover, .Nationalist-Conservative_dot:hover,
 .Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
-.Bloq-Quebecois_dot:hover, .Labour_dot:hover {
+.Bloq-Quebecois_dot:hover, .Labour_dot:hover, .Unionist_dot:hover, .Opposition_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
