--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -319,6 +319,39 @@
     transition: all .5s ease;
 }
 
+.Social-Credit_dot {
+    bottom: 10%;
+    height: 0.62rem;
+    width: 0.62rem;
+    margin: 0.07rem;
+    background-color:#005F00;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all .5s ease;
+}
+
+.Co-operative-Commonwealth-Federation_dot {
+    bottom: 10%;
+    height: 0.62rem;
+    width: 0.62rem;
+    margin: 0.07rem;
+    background-color:#FF9900;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all .5s ease;
+}
+
+.Reconstruction-Party_dot {
+    bottom: 10%;
+    height: 0.62rem;
+    width: 0.62rem;
+    margin: 0.07rem;
+    background-color:#F5F5DC;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all .5s ease;
+}
+
 .fifth_row, .fourth_row, .third_row, .second_row, .first_row, .sixth_row,
 .thirteenth_row, .twelfth_row, .eleventh_row, .tenth_row, .ninth_row,
 .eighth_row, .seventh_row {
@@ -330,7 +363,9 @@
 .Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
 .Bloq-Quebecois_dot:hover, .Labour_dot:hover, .Unionist_dot:hover, .Opposition_dot:hover, 
 .United-Farmers-of-Alberta_dot:hover, .Progressive_dot:hover,
-.United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover {
+.United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover,
+.Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
+.Reconstruction-Party_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -342,7 +377,9 @@
 .Patrons-of-Industry_dot, .McCarthyite_dot, .Green_dot, .NDP_dot,
 .Bloq-Quebecois_dot, .Labour_dot, .Unionist_dot, .Opposition_dot,
 .Progressive_dot, .United-Farmers-of-Alberta_dot, 
-.United-Farmers-of-Ontario_dot, .Liberal-Progressive_dot {
+.United-Farmers-of-Ontario_dot, .Liberal-Progressive_dot,
+.Social-Credit_dot, .Co-operative-Commonwealth-Federation_dot,
+.Reconstruction-Party_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -364,7 +401,9 @@
 .Patrons-of-Industry_dot:hover, .McCarthyite_dot:hover, .Green_dot:hover, .NDP_dot:hover,
 .Bloq-Quebecois_dot:hover, .Labour_dot:hover, .Unionist_dot:hover, .Opposition_dot:hover,
 .United-Farmers-of-Alberta_dot:hover, .Progressive_dot:hover,
-.United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover {
+.United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover,
+.Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
+.Reconstruction-Party_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
