--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -165,7 +165,7 @@
     transition: all .5s ease;
 }
 
-.Conservative_dot, .Unionist_dot, .National-Government_dot {
+.Conservative_dot, .Unionist_dot, .National-Government_dot, .Progressive-Conservative_dot {
     bottom: 10%;
     height: 0.62rem;
     width: 0.62rem;
@@ -264,7 +264,7 @@
     transition: all .5s ease;
 }
 
-.Bloq-Quebecois_dot {
+.Bloq-Quebecois_dot, .Bloc-populaire_dot {
     bottom: 10%;
     height: 0.62rem;
     width: 0.62rem;
@@ -352,7 +352,7 @@
     transition: all .5s ease;
 }
 
-.United-Reform_dot {
+.United-Reform_dot, .Labor-Progressive_dot {
     bottom: 10%;
     height: 0.62rem;
     width: 0.62rem;
@@ -377,7 +377,8 @@
 .United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover,
 .Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover, .New-Democracy_dot:hover,
-.United-Reform_dot:hover {
+.United-Reform_dot:hover, .Progressive-Conservative_dot:hover, .Bloc-populaire_dot:hover,
+.Labor-Progressive_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -392,7 +393,8 @@
 .United-Farmers-of-Ontario_dot, .Liberal-Progressive_dot,
 .Social-Credit_dot, .Co-operative-Commonwealth-Federation_dot,
 .Reconstruction-Party_dot, .National-Government_dot, 
-.New-Democracy_dot, .United-Reform_dot {
+.New-Democracy_dot, .United-Reform_dot, .Progressive-Conservative_dot,
+.Bloc-populaire_dot, .Labor-Progressive_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -417,7 +419,8 @@
 .United-Farmers-of-Ontario_dot:hover, .Liberal-Progressive_dot:hover,
 .Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover,
-.New-Democracy_dot:hover, .United-Reform_dot:hover {
+.New-Democracy_dot:hover, .United-Reform_dot:hover, .Progressive-Conservative_dot:hover,
+.Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
