--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -363,6 +363,17 @@
     transition: all .5s ease;
 }
 
+.Liberal-Labour_dot {
+    bottom: 10%;
+    height: 0.62rem;
+    width: 0.62rem;
+    margin: 0.07rem;
+    background-color:#A91CB9;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all .5s ease;
+}
+
 .fifth_row, .fourth_row, .third_row, .second_row, .first_row, .sixth_row,
 .thirteenth_row, .twelfth_row, .eleventh_row, .tenth_row, .ninth_row,
 .eighth_row, .seventh_row {
@@ -378,7 +389,7 @@
 .Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover, .New-Democracy_dot:hover,
 .United-Reform_dot:hover, .Progressive-Conservative_dot:hover, .Bloc-populaire_dot:hover,
-.Labor-Progressive_dot:hover {
+.Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -394,7 +405,7 @@
 .Social-Credit_dot, .Co-operative-Commonwealth-Federation_dot,
 .Reconstruction-Party_dot, .National-Government_dot, 
 .New-Democracy_dot, .United-Reform_dot, .Progressive-Conservative_dot,
-.Bloc-populaire_dot, .Labor-Progressive_dot {
+.Bloc-populaire_dot, .Labor-Progressive_dot, .Liberal-Labour_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -420,7 +431,7 @@
 .Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover,
 .New-Democracy_dot:hover, .United-Reform_dot:hover, .Progressive-Conservative_dot:hover,
-.Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover {
+.Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
