Optimized website for search engines; all elections now have their own independent pages.

--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -97,6 +97,11 @@
     width: 100dvw;
 }
 
+.shiftUnderneathMainBanner {
+    position: absolute;
+    top: 10%;
+}
+
 #current_election_text {
     font-size: xx-large;
     font-weight: bold;
