--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -258,7 +258,7 @@
     transition: all .5s ease;
 } 
 
-.NDP_dot {
+.NDP_dot, .New-Democratic_dot {
     bottom: 10%;
     height: 0.62rem;
     width: 0.62rem;
@@ -394,7 +394,7 @@
 .Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover, .New-Democracy_dot:hover,
 .United-Reform_dot:hover, .Progressive-Conservative_dot:hover, .Bloc-populaire_dot:hover,
-.Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover {
+.Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover, .New-Democratic_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -410,7 +410,8 @@
 .Social-Credit_dot, .Co-operative-Commonwealth-Federation_dot,
 .Reconstruction-Party_dot, .National-Government_dot, 
 .New-Democracy_dot, .United-Reform_dot, .Progressive-Conservative_dot,
-.Bloc-populaire_dot, .Labor-Progressive_dot, .Liberal-Labour_dot {
+.Bloc-populaire_dot, .Labor-Progressive_dot, .Liberal-Labour_dot,
+.New-Democratic_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -436,7 +437,8 @@
 .Social-Credit_dot:hover, .Co-operative-Commonwealth-Federation_dot:hover,
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover,
 .New-Democracy_dot:hover, .United-Reform_dot:hover, .Progressive-Conservative_dot:hover,
-.Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover {
+.Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover,
+.New-Democratic_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
