--- a/templates/electionMapTemplate.jinja
+++ b/templates/electionMapTemplate.jinja
@@ -7,7 +7,7 @@
         See the results of any federal district in the {{ electionYear }} Canadian federal election.">
     <meta name="keywords" content="canadian, elections, maps, 1867, 1872, 1874, 1882,
      1887, 1891, 1896, 1900, 1904, 1908, 1911, 1917, 1921, 1925, 1926,
-     1930, 1935, 1940, 1945, 1949, 1953, 1957, 1958, 1962, 2019, 2021, federal, results, 
+     1930, 1935, 1940, 1945, 1949, 1953, 1957, 1958, 1962, 1963, 2019, 2021, federal, results, 
      interactive, canada">
     <title>{{ electionYear }} Canadian Election Map</title>
     <link rel="stylesheet" href="/main/elections_style.css">
@@ -27,8 +27,8 @@
             <button class="electionButtons" onclick="loadElection('2021')">2021</button>
         </div>
         <div class="dropdown">
-            <button class="electionButtons" id="moreButton" onclick="showDropdownMenu()">More</button>
-            <div class="dropdown-content">
+            <button class="electionButtons" id="moreButton" onclick="toggleDropdownMenu()">More</button>
+            <div class="dropdown-content" style="display: none">
                 <a onclick="loadElection('1867')">1867</a>
                 <a onclick="loadElection('1872')">1872</a>
                 <a onclick="loadElection('1874')">1874</a>
@@ -54,6 +54,7 @@
                 <a onclick="loadElection('1957')">1957</a>
                 <a onclick="loadElection('1958')">1958</a>
                 <a onclick="loadElection('1962')">1962</a>
+                <a onclick="loadElection('1963')">1963</a>
                 <a onclick="loadElection('2019')">2019</a>
                 <a onclick="loadElection('2021')">2021</a>
             </div>
