--- a/pages/main/elections_style.css
+++ b/pages/main/elections_style.css
@@ -379,6 +379,17 @@
     transition: all .5s ease;
 }
 
+.No-Affiliation_dot {
+    bottom: 10%;
+    height: 0.62rem;
+    width: 0.62rem;
+    margin: 0.07rem;
+    background-color:#000000;
+    border-radius: 50%;
+    display: inline-block;
+    transition: all .5s ease;
+}
+
 .fifth_row, .fourth_row, .third_row, .second_row, .first_row, .sixth_row,
 .thirteenth_row, .twelfth_row, .eleventh_row, .tenth_row, .ninth_row,
 .eighth_row, .seventh_row {
@@ -395,7 +406,7 @@
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover, .New-Democracy_dot:hover,
 .United-Reform_dot:hover, .Progressive-Conservative_dot:hover, .Bloc-populaire_dot:hover,
 .Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover, .New-Democratic_dot:hover,
-.Ralliement_dot:hover {
+.Ralliement_dot:hover, .No-Affiliation_dot:hover {
     height: 1rem;
     width: 1rem;
     transition: all .5s ease;
@@ -412,7 +423,7 @@
 .Reconstruction-Party_dot, .National-Government_dot, 
 .New-Democracy_dot, .United-Reform_dot, .Progressive-Conservative_dot,
 .Bloc-populaire_dot, .Labor-Progressive_dot, .Liberal-Labour_dot,
-.New-Democratic_dot, .Ralliement_dot {
+.New-Democratic_dot, .Ralliement_dot, .No-Affiliation_dot {
             height: 0.31rem;
             width: 0.31rem;
             margin: 0.03rem;
@@ -439,7 +450,7 @@
 .Reconstruction-Party_dot:hover, .National-Government_dot:hover,
 .New-Democracy_dot:hover, .United-Reform_dot:hover, .Progressive-Conservative_dot:hover,
 .Bloc-populaire_dot:hover, .Labor-Progressive_dot:hover, .Liberal-Labour_dot:hover,
-.New-Democratic_dot:hover, .Ralliement_dot:hover {
+.New-Democratic_dot:hover, .Ralliement_dot:hover, .No-Affiliation_dot:hover {
             height: 0.5rem;
             width: 0.5rem;
         }
